WIP Use tags to disable inapplicable tests